Logs/.ipynb_checkpoints/log-53074515_12-checkpoint.err
  File "/var/spool/slurm/job53074528/slurm_script", line 23
    return basename in os.listdir('./trajectory'):
                                                 ^
SyntaxError: invalid syntax
